bin/tests/errors/lexer/lex_err_string_eol.swg
#global fileprivate

// swc-expected-error@+ {{lex_err_string_eol}}
"abc
